// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CareersSection > renders default as expected 1`] = `
<div>
  <section
    class="section section-body careers-section"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative"
        >
          Careers at BlueDot Impact
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <div
        class="careers-section__container flex flex-col gap-8"
      >
        <div
          class="careers-section__listing"
        >
          <div
            class="careers-section__card--desktop w-full flex flex-row items-center justify-between p-8 container-lined"
          >
            <strong
              class="careers-section__title basis-[33%]"
            >
              AI Alignment Project Judge
            </strong>
            <p
              class="careers-section__location"
            >
              London, Remote
            </p>
            <p
              class="careers-section__type"
            >
              Permanent
            </p>
            <a
              class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter careers-section__cta-button"
              data-testid="cta-link"
              href="https://bluedot.org/ai-alignment-project-judge/"
            >
              <span
                class="cta-button__text"
              >
                Apply now
              </span>
              <span
                class="cta-button__chevron ml-3"
              >
                <img
                  alt="→"
                  class="cta-button__chevron-icon size-2"
                  src="/icons/chevron_blue.svg"
                />
              </span>
            </a>
          </div>
        </div>
        <div
          class="careers-section__listing"
        >
          <div
            class="careers-section__card--desktop w-full flex flex-row items-center justify-between p-8 container-lined"
          >
            <strong
              class="careers-section__title basis-[33%]"
            >
              Course Operations Specialist
            </strong>
            <p
              class="careers-section__location"
            >
              London, Remote
            </p>
            <p
              class="careers-section__type"
            >
              Permanent
            </p>
            <a
              class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter careers-section__cta-button"
              data-testid="cta-link"
              href="https://bluedot.org/ai-safety-course-operations/"
            >
              <span
                class="cta-button__text"
              >
                Apply now
              </span>
              <span
                class="cta-button__chevron ml-3"
              >
                <img
                  alt="→"
                  class="cta-button__chevron-icon size-2"
                  src="/icons/chevron_blue.svg"
                />
              </span>
            </a>
          </div>
        </div>
        <div
          class="careers-section__listing"
        >
          <div
            class="careers-section__card--desktop w-full flex flex-row items-center justify-between p-8 container-lined"
          >
            <strong
              class="careers-section__title basis-[33%]"
            >
              Software Engineering Contractor
            </strong>
            <p
              class="careers-section__location"
            >
              London, Remote
            </p>
            <p
              class="careers-section__type"
            >
              Permanent
            </p>
            <a
              class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter careers-section__cta-button"
              data-testid="cta-link"
              href="https://bluedot.org/swe-contractor/"
            >
              <span
                class="cta-button__text"
              >
                Apply now
              </span>
              <span
                class="cta-button__chevron ml-3"
              >
                <img
                  alt="→"
                  class="cta-button__chevron-icon size-2"
                  src="/icons/chevron_blue.svg"
                />
              </span>
            </a>
          </div>
        </div>
        <div
          class="careers-section__listing"
        >
          <div
            class="careers-section__card--desktop w-full flex flex-row items-center justify-between p-8 container-lined"
          >
            <strong
              class="careers-section__title basis-[33%]"
            >
              Economics of Transformative AI Teaching Fellow
            </strong>
            <p
              class="careers-section__location"
            >
              London, Remote
            </p>
            <p
              class="careers-section__type"
            >
              Permanent
            </p>
            <a
              class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter careers-section__cta-button"
              data-testid="cta-link"
              href="https://bluedot.org/economics-of-tai-teaching-fellow/"
            >
              <span
                class="cta-button__text"
              >
                Apply now
              </span>
              <span
                class="cta-button__chevron ml-3"
              >
                <img
                  alt="→"
                  class="cta-button__chevron-icon size-2"
                  src="/icons/chevron_blue.svg"
                />
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`CareersSection > renders mobile as expected 1`] = `
<div>
  <section
    class="section section-body careers-section"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative"
        >
          Careers at BlueDot Impact
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <div
        class="careers-section__container flex flex-col gap-8"
      >
        <div
          class="careers-section__listing"
        >
          <div
            class="card flex flex-col items-start transition-transform duration-200 careers-section__card--mobile container-lined p-6 max-w-full"
          >
            <div
              class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
            >
              <div
                class="card__text"
              >
                <p
                  class="card__title subtitle-sm mb-2"
                >
                  AI Alignment Project Judge
                </p>
                <p
                  class="card__subtitle "
                >
                  London, Remote • Permanent
                </p>
              </div>
              <div
                class="card__bottom-section flex flex-col gap-space-between"
              >
                <a
                  class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                  data-testid="cta-link"
                  href="https://bluedot.org/ai-alignment-project-judge/"
                >
                  <span
                    class="cta-button__text"
                  >
                    Apply now
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="careers-section__listing"
        >
          <div
            class="card flex flex-col items-start transition-transform duration-200 careers-section__card--mobile container-lined p-6 max-w-full"
          >
            <div
              class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
            >
              <div
                class="card__text"
              >
                <p
                  class="card__title subtitle-sm mb-2"
                >
                  Course Operations Specialist
                </p>
                <p
                  class="card__subtitle "
                >
                  London, Remote • Permanent
                </p>
              </div>
              <div
                class="card__bottom-section flex flex-col gap-space-between"
              >
                <a
                  class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                  data-testid="cta-link"
                  href="https://bluedot.org/ai-safety-course-operations/"
                >
                  <span
                    class="cta-button__text"
                  >
                    Apply now
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="careers-section__listing"
        >
          <div
            class="card flex flex-col items-start transition-transform duration-200 careers-section__card--mobile container-lined p-6 max-w-full"
          >
            <div
              class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
            >
              <div
                class="card__text"
              >
                <p
                  class="card__title subtitle-sm mb-2"
                >
                  Software Engineering Contractor
                </p>
                <p
                  class="card__subtitle "
                >
                  London, Remote • Permanent
                </p>
              </div>
              <div
                class="card__bottom-section flex flex-col gap-space-between"
              >
                <a
                  class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                  data-testid="cta-link"
                  href="https://bluedot.org/swe-contractor/"
                >
                  <span
                    class="cta-button__text"
                  >
                    Apply now
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="careers-section__listing"
        >
          <div
            class="card flex flex-col items-start transition-transform duration-200 careers-section__card--mobile container-lined p-6 max-w-full"
          >
            <div
              class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
            >
              <div
                class="card__text"
              >
                <p
                  class="card__title subtitle-sm mb-2"
                >
                  Economics of Transformative AI Teaching Fellow
                </p>
                <p
                  class="card__subtitle "
                >
                  London, Remote • Permanent
                </p>
              </div>
              <div
                class="card__bottom-section flex flex-col gap-space-between"
              >
                <a
                  class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                  data-testid="cta-link"
                  href="https://bluedot.org/economics-of-tai-teaching-fellow/"
                >
                  <span
                    class="cta-button__text"
                  >
                    Apply now
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
